# crawler

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONCEPT.md  ROADMAP.md  docker-compose.yml  pyproject.toml  todo-001.md  todo-002.md  todo-003.md
.claude/: settings.local.json
ADR/: 0001-embedding-dimension-and-provider.md  0002-third-source-bluesky-telegram-deferred.md  0003-single-postgres-instance.md  0004-content-hash-text-only.md  _template.md
core/: CLAUDE.md
crawler/: __init__.py
crawler/api_core/: __init__.py  exceptions.py  projects.py  scanning.py  signals.py
crawler/cli/: .links  .timeline  CLAUDE.md  __init__.py  _context.py  formatters.py  main.py
crawler/cli/commands/: __init__.py  project.py  scan.py  signals.py  usage.py
crawler/core/: .links  .timeline  CLAUDE.md  __init__.py  contracts.py  events.py  models.py
crawler/plugins/: .links  .timeline  CLAUDE.md  __init__.py
crawler/plugins/sources/: .links  .timeline  CLAUDE.md  __init__.py  _base.py  _registry.py  reddit.py
crawler/processing/: .links  .timeline  CLAUDE.md  __init__.py  _fakes.py  context.py  pipeline.py
crawler/processing/stages/: __init__.py  decide.py  dedup.py  keyword_filter.py  normalize.py
crawler/storage/: CLAUDE.md  __init__.py  database.py  migrate.py  repositories.py  schema.sql
crawler/storage/migrations/: 001_initial.sql  002_projects.sql  README.md
docker/: postgres.Dockerfile
storage/: .links  .timeline  CLAUDE.md
tests/: conftest.py
tests/integration/: test_storage.py
tests/unit/: conftest.py  test_api_core_projects.py  test_api_core_scanning.py  test_api_core_signals.py  test_cli_project.py  test_cli_scan.py  test_cli_signals.py  test_cli_usage.py  test_decide.py  test_dedup.py  test_keyword_filter.py  test_normalize.py  test_pipeline_e2e.py  test_reddit_source.py
