[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler"
version = "0.0.1"
description = "Personal deep-monitoring crawler — sources to filtered signals via 8-stage pipeline."
requires-python = ">=3.12"
readme = "CONCEPT.md"
license = { text = "Proprietary" }
authors = [{ name = "Egor Okrepilov" }]

dependencies = [
    "pydantic>=2.5",
    "asyncpg>=0.29",
    "typing_extensions>=4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[tool.setuptools]
packages = ["crawler", "crawler.core", "crawler.storage"]
include-package-data = true

[tool.setuptools.package-data]
"crawler.storage" = ["*.sql", "migrations/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true
files = ["crawler"]

[tool.mypy-asyncpg]
ignore_missing_imports = true
